--- a/repeating_patterns.ipynb
+++ b/repeating_patterns.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,9 +10,9 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: mecode in c:\\programdata\\anaconda3\\lib\\site-packages (0.4.1)\n",
-      "Requirement already satisfied: numpy in c:\\users\\jinch\\appdata\\roaming\\python\\python39\\site-packages (from mecode) (1.24.2)\n",
       "Requirement already satisfied: pyserial in c:\\programdata\\anaconda3\\lib\\site-packages (from mecode) (3.5)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Note: you may need to restart the kernel to use updated packages.Requirement already satisfied: numpy in c:\\users\\jinch\\appdata\\roaming\\python\\python39\\site-packages (from mecode) (1.24.2)\n",
+      "\n"
      ]
     },
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,6 @@
     "    g = GMatrix(outfile=outfile)\n",
     "    g.push_matrix()\n",
     "    g.write(start_code)\n",
-    "    pen_up(g)\n",
     "    return g\n"
    ]
   },
@@ -99,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +121,7 @@
     "        pen_down(g)\n",
     "\n",
     "        # Draw the segment by moving to each point\n",
-    "        for x, y in segment:\n",
+    "        for x, y in segment[1:]:\n",
     "            g.abs_move(x, y)\n",
     "\n",
     "        # Finish drawing the segment. Raise the pen to prepare for the next segment.\n",
@@ -131,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -151,9 +150,6 @@
       "G1 X0.000000 Y0.000000 Z-3.300000\n",
       "M9\n",
       "G90 ;absolute\n",
-      "G1 X0.000000 Y10.000000 Z0.000000\n",
-      "G91 ;relative\n",
-      "G90 ;absolute\n",
       "G1 X0.000000 Y0.000000 Z0.000000\n",
       "G91 ;relative\n",
       "G90 ;absolute\n",
@@ -167,6 +163,8 @@
    "source": [
     "# Unit test for draw_unit\n",
     "g: GMatrix = get_gmatrix()\n",
+    "pen_up(g)\n",
+    "\n",
     "square_pattern = [\n",
     "        [(0, 10), (0, 0), (10, 0)] # The left and top sides of the square\n",
     "    ] # This pattern contains only one segment.\n",
@@ -183,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,17 +231,17 @@
     "        for x_rep in range(repeat[0]):\n",
     "            draw_unit(g, path)\n",
     "            x += width\n",
-    "            g.abs_move(x=width)\n",
+    "            g.abs_move(x)\n",
     "        \n",
     "        # Move to the next row\n",
     "        x = x_initial\n",
     "        y += height\n",
-    "        g.abs_move(x=x_initial, y=height)\n"
+    "        g.abs_move(x_initial, y)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +249,7 @@
     "end_code = \"\"\n",
     "\n",
     "# Initialise GCode generation and write start code\n",
-    "g: GMatrix = get_gmatrix()\n",
+    "g: GMatrix = get_gmatrix(\"output.gcode\")\n",
     "\n",
     "# Move the pen to a reasonable starting position\n",
     "pen_up(g)\n",
