Improve GCode output by setting absolute mode

--- a/repeating_patterns.ipynb
+++ b/repeating_patterns.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,8 +10,8 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: mecode in c:\\programdata\\anaconda3\\lib\\site-packages (0.4.1)\n",
-      "Requirement already satisfied: numpy in c:\\users\\jinch\\appdata\\roaming\\python\\python39\\site-packages (from mecode) (1.24.2)\n",
       "Requirement already satisfied: pyserial in c:\\programdata\\anaconda3\\lib\\site-packages (from mecode) (3.5)\n",
+      "Requirement already satisfied: numpy in c:\\users\\jinch\\appdata\\roaming\\python\\python39\\site-packages (from mecode) (1.24.2)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,13 @@
     "        g (GMatrix): GMatrix instance to use for GCode generation.\n",
     "    \"\"\"\n",
     "\n",
-    "    g.move(z=-3.3)\n",
+    "    # This represents lowering the pen, but does not have any real effect as this plotter only prints in 2D.\n",
+    "    if g.is_relative:\n",
+    "        g.move(z=-3.3)\n",
+    "    else:\n",
+    "        g.move(x=g.current_position['x'], y=g.current_position['y'], z=0)\n",
+    "    \n",
+    "    # This command actually lowers the pen.\n",
     "    g.write(\"M9\")\n",
     "\n",
     "\n",
@@ -67,7 +73,13 @@
     "        g (GMatrix): GMatrix instance to use for GCode generation.\n",
     "    \"\"\"\n",
     "\n",
-    "    g.move(z=3.3)\n",
+    "    # This represents raising the pen, but does not have any real effect as this plotter only prints in 2D.\n",
+    "    if g.is_relative:\n",
+    "        g.move(z=3.3)\n",
+    "    else:\n",
+    "        g.move(x=g.current_position['x'], y=g.current_position['y'], z=3.3)\n",
+    "\n",
+    "    # This command actually raises the pen.\n",
     "    g.write(\"M8\")\n",
     "\n",
     "\n",
@@ -98,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,6 +232,9 @@
     "    if width * repeat[0] > 205 or height * repeat[1] > 275:\n",
     "        raise ValueError(\"Repeating pattern is outside the dimension limit\")\n",
     "\n",
+    "    # Set to absolute mode for drawing repeating patterns\n",
+    "    g.absolute()\n",
+    "\n",
     "    # Draw the pattern from the current position\n",
     "    x_initial = g.current_position['x']\n",
     "    y_initial = g.current_position['y']\n",
@@ -236,12 +251,15 @@
     "        # Move to the next row\n",
     "        x = x_initial\n",
     "        y += height\n",
-    "        g.abs_move(x_initial, y)\n"
+    "        g.abs_move(x_initial, y)\n",
+    "\n",
+    "    # Set to relative mode\n",
+    "    g.relative()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +277,7 @@
     "square_pattern = [\n",
     "        [(0, 10), (0, 0), (10, 0)] # The left and top sides of the square\n",
     "    ] # This pattern contains only one segment.\n",
-    "draw_reapeating_pattern(g, 10, 10, square_pattern, 1, (4, 10))\n",
+    "draw_reapeating_pattern(g, 10, 10, square_pattern, 1, (5, 2))\n",
     "\n",
     "# Write end code\n",
     "g.pop_matrix()\n",
