Fix issue in multi-segment patterns

--- a/repeating_patterns.ipynb
+++ b/repeating_patterns.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,11 +122,17 @@
     "        path (list[list[tuple[float, float]]]): List of segments to draw. Each segment is a list of points. The coordinates are relative to the current position.\n",
     "    \"\"\"\n",
     "\n",
-    "    for segment in path:\n",
-    "        # Convert relative coordinates to absolute coordinates\n",
-    "        segment = [(x + g.current_position['x'], y + g.current_position['y'])\n",
+    "    # Set to absolute coordinates\n",
+    "    is_relative = g.is_relative\n",
+    "    if is_relative:\n",
+    "        g.absolute()\n",
+    "\n",
+    "    # Convert path in relative coordinates to absolute coordinates, based on the current position\n",
+    "    for i, segment in enumerate(path):\n",
+    "        path[i] = [(x + g.current_position['x'], y + g.current_position['y'])\n",
     "                   for x, y in segment]\n",
     "\n",
+    "    for segment in path:\n",
     "        # Move to the first point of the segment and start drawing\n",
     "        x0, y0 = segment[0]\n",
     "        g.abs_move(x0, y0)\n",
@@ -137,50 +143,43 @@
     "            g.abs_move(x, y)\n",
     "\n",
     "        # Finish drawing the segment. Raise the pen to prepare for the next segment.\n",
-    "        pen_up(g)\n"
+    "        pen_up(g)\n",
+    "\n",
+    "    # Restore the coordinate mode\n",
+    "    if is_relative:\n",
+    "        g.relative()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "G91 ;relative\n",
-      "G91 ;relative\n",
-      "G21 ;mm\n",
-      "G92 X0 Y0 Z0 ;reset origin\n",
-      "F2000;motion speed\n",
-      "G1 X0.000000 Y0.000000 Z3.300000\n",
-      "M8\n",
-      "G90 ;absolute\n",
-      "G1 X0.000000 Y10.000000 Z3.300000\n",
-      "G91 ;relative\n",
-      "G1 X0.000000 Y0.000000 Z-3.300000\n",
-      "M9\n",
-      "G90 ;absolute\n",
-      "G1 X0.000000 Y0.000000 Z0.000000\n",
-      "G91 ;relative\n",
-      "G90 ;absolute\n",
-      "G1 X10.000000 Y0.000000 Z0.000000\n",
-      "G91 ;relative\n",
-      "G1 X0.000000 Y0.000000 Z3.300000\n",
-      "M8\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "square_pattern = [\n",
+    "    [(0, 10), (0, 0), (10, 0)]  # The left and top sides of the square\n",
+    "]  # This pattern contains only one segment.\n",
+    "\n",
+    "rotated_square_pattern = [\n",
+    "    [(0, 0), (20, 20)],  # diagonal top-left to bottom-right\n",
+    "    [(20, 15), (15, 10), (20, 5)],  # right triangle\n",
+    "    [(20, 0), (0, 20)],  # diagonal top-right to bottom-left\n",
+    "    [(0, 15), (5, 10), (0, 5)],  # left triangle\n",
+    "    [(5, 0), (10, 5), (15, 0)],  # top triangle\n",
+    "    [(5, 20), (10, 15), (15, 20)],  # bottom triangle\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Unit test for draw_unit\n",
-    "g: GMatrix = get_gmatrix()\n",
+    "g: GMatrix = get_gmatrix(\"unit_test.gcode\")\n",
     "pen_up(g)\n",
-    "\n",
-    "square_pattern = [\n",
-    "        [(0, 10), (0, 0), (10, 0)] # The left and top sides of the square\n",
-    "    ] # This pattern contains only one segment.\n",
-    "draw_unit(g, square_pattern)"
+    "draw_unit(g, rotated_square_pattern)\n"
    ]
   },
   {
@@ -259,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,10 +273,7 @@
     "g.move(30, 30)\n",
     "\n",
     "# Draw the pattern\n",
-    "square_pattern = [\n",
-    "        [(0, 10), (0, 0), (10, 0)] # The left and top sides of the square\n",
-    "    ] # This pattern contains only one segment.\n",
-    "draw_reapeating_pattern(g, 10, 10, square_pattern, 1, (5, 2))\n",
+    "draw_reapeating_pattern(g, 20, 20, rotated_square_pattern, 1, (1, 2))\n",
     "\n",
     "# Write end code\n",
     "g.pop_matrix()\n",
