Copy the path to avoid changes in calculating abs coordinates

--- a/repeating_patterns.ipynb
+++ b/repeating_patterns.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: mecode in c:\\programdata\\anaconda3\\lib\\site-packages (0.4.1)\n",
+      "Requirement already satisfied: mecode in c:\\programdata\\anaconda3\\lib\\site-packages (0.4.1)Note: you may need to restart the kernel to use updated packages.\n",
       "Requirement already satisfied: pyserial in c:\\programdata\\anaconda3\\lib\\site-packages (from mecode) (3.5)\n",
       "Requirement already satisfied: numpy in c:\\users\\jinch\\appdata\\roaming\\python\\python39\\site-packages (from mecode) (1.24.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "\n"
      ]
     },
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,15 +121,18 @@
     "        g (GMatrix): GMatrix instance to use for GCode generation.\n",
     "        path (list[list[tuple[float, float]]]): List of segments to draw. Each segment is a list of points. The coordinates are relative to the current position.\n",
     "    \"\"\"\n",
-    "\n",
+    "    \n",
     "    # Set to absolute coordinates\n",
     "    is_relative = g.is_relative\n",
     "    if is_relative:\n",
     "        g.absolute()\n",
     "\n",
     "    # Convert path in relative coordinates to absolute coordinates, based on the current position\n",
+    "    path = path.copy() # Important: make a copy of the path, so that the original path is not modified\n",
+    "    current_x = g.current_position['x']\n",
+    "    current_y = g.current_position['y']\n",
     "    for i, segment in enumerate(path):\n",
-    "        path[i] = [(x + g.current_position['x'], y + g.current_position['y'])\n",
+    "        path[i] = [(x + current_x, y + current_y)\n",
     "                   for x, y in segment]\n",
     "\n",
     "    for segment in path:\n",
@@ -152,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +248,7 @@
     "        for x_rep in range(repeat[0]):\n",
     "            draw_unit(g, path)\n",
     "            x += width\n",
-    "            g.abs_move(x)\n",
+    "            g.abs_move(x, y)\n",
     "        \n",
     "        # Move to the next row\n",
     "        x = x_initial\n",
@@ -258,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +276,7 @@
     "g.move(30, 30)\n",
     "\n",
     "# Draw the pattern\n",
-    "draw_reapeating_pattern(g, 20, 20, rotated_square_pattern, 1, (1, 2))\n",
+    "draw_reapeating_pattern(g, 20, 20, rotated_square_pattern, 1, (4, 5))\n",
     "\n",
     "# Write end code\n",
     "g.pop_matrix()\n",
