--- a/repeating_patterns.ipynb
+++ b/repeating_patterns.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: mecode in c:\\programdata\\anaconda3\\lib\\site-packages (0.4.1)Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: pyserial in c:\\programdata\\anaconda3\\lib\\site-packages (from mecode) (3.5)\n",
+      "Requirement already satisfied: mecode in c:\\programdata\\anaconda3\\lib\\site-packages (0.4.1)\n",
       "Requirement already satisfied: numpy in c:\\users\\jinch\\appdata\\roaming\\python\\python39\\site-packages (from mecode) (1.24.2)\n",
-      "\n"
+      "Requirement already satisfied: pyserial in c:\\programdata\\anaconda3\\lib\\site-packages (from mecode) (3.5)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
     "\n",
     "    Args:\n",
     "        g (GMatrix): GMatrix instance to use for GCode generation.\n",
-    "        path (list[list[tuple[float, float]]]): List of segments to draw. Each segment is a list of points. The coordinates are relative to the current position.\n",
+    "        path (list[list[tuple[float, float]]]): List of strokes to draw. Each stroke is a list of points. The coordinates are relative to the current position.\n",
     "    \"\"\"\n",
     "    \n",
     "    # Set to absolute coordinates\n",
@@ -131,21 +131,21 @@
     "    path = path.copy() # Important: make a copy of the path, so that the original path is not modified\n",
     "    current_x = g.current_position['x']\n",
     "    current_y = g.current_position['y']\n",
-    "    for i, segment in enumerate(path):\n",
+    "    for i, stroke in enumerate(path):\n",
     "        path[i] = [(x + current_x, y + current_y)\n",
-    "                   for x, y in segment]\n",
+    "                   for x, y in stroke]\n",
     "\n",
-    "    for segment in path:\n",
-    "        # Move to the first point of the segment and start drawing\n",
-    "        x0, y0 = segment[0]\n",
+    "    for stroke in path:\n",
+    "        # Move to the first point of the stroke and start drawing\n",
+    "        x0, y0 = stroke[0]\n",
     "        g.abs_move(x0, y0)\n",
     "        pen_down(g)\n",
     "\n",
-    "        # Draw the segment by moving to each point\n",
-    "        for x, y in segment[1:]:\n",
+    "        # Draw the stroke by moving to each point\n",
+    "        for x, y in stroke[1:]:\n",
     "            g.abs_move(x, y)\n",
     "\n",
-    "        # Finish drawing the segment. Raise the pen to prepare for the next segment.\n",
+    "        # Finish drawing the stroke. Raise the pen to prepare for the next stroke.\n",
     "        pen_up(g)\n",
     "\n",
     "    # Restore the coordinate mode\n",
@@ -155,13 +155,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "square_pattern = [\n",
     "    [(0, 10), (0, 0), (10, 0)]  # The left and top sides of the square\n",
-    "]  # This pattern contains only one segment.\n",
+    "]  # This pattern contains only one stroke.\n",
     "\n",
     "rotated_square_pattern = [\n",
     "    [(0, 0), (20, 20)],  # diagonal top-left to bottom-right\n",
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,19 +213,19 @@
     "        g (GMatrix): GMatrix instance to use for GCode generation.\n",
     "        width (float): Width of the pattern in mm.\n",
     "        height (float): Height of the pattern in mm.\n",
-    "        path (list[list[tuple[float, float]]]): List of segments to draw. Each segment is a list of points.\n",
+    "        path (list[list[tuple[float, float]]]): List of strokes to draw. Each stroke is a list of points.\n",
     "        scale (float): Scale factor to apply to the pattern.\n",
     "        repeat (tuple[int, int]): Number of times to repeat the pattern in the x and y directions, respectively.\n",
     "    \"\"\"\n",
     "\n",
     "    # Check if there is any point in path that is outside the limit of width and height\n",
-    "    for segment in path:\n",
-    "        for x, y in segment:\n",
+    "    for stroke in path:\n",
+    "        for x, y in stroke:\n",
     "            if x > width or y > height:\n",
     "                raise ValueError(\"Path is outside the dimension limit\")\n",
     "\n",
     "    # Scale the pattern\n",
-    "    path = [[(x * scale, y * scale) for x, y in segment] for segment in path]\n",
+    "    path = [[(x * scale, y * scale) for x, y in stroke] for stroke in path]\n",
     "    width = width * scale\n",
     "    height = height * scale\n",
     "\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
