--- a/repeating_patterns.ipynb
+++ b/repeating_patterns.ipynb
@@ -211,8 +211,8 @@
     "\n",
     "    Args:\n",
     "        g (GMatrix): GMatrix instance to use for GCode generation.\n",
-    "        width (float): Width of the pattern in mm.\n",
-    "        height (float): Height of the pattern in mm.\n",
+    "        width (float): Width of the pattern in mm. This is the distance moved in x-direction after each pattern is drawn.\n",
+    "        height (float): Height of the pattern in mm. This is the distance moved in y-direction after each line of patterns is drawn.\n",
     "        path (list[list[tuple[float, float]]]): List of strokes to draw. Each stroke is a list of points.\n",
     "        scale (float): Scale factor to apply to the pattern.\n",
     "        repeat (tuple[int, int]): Number of times to repeat the pattern in the x and y directions, respectively.\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
