--- a/svg-to-gcode/svg2gcode.ipynb
+++ b/svg-to-gcode/svg2gcode.ipynb
@@ -4,90 +4,27 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution -olorama (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -olorama (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
-      "ERROR: Could not find a version that satisfies the requirement svg2gcode (from versions: none)\n",
-      "ERROR: No matching distribution found for svg2gcode\n",
-      "WARNING: Ignoring invalid distribution -olorama (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -olorama (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -olorama (c:\\programdata\\anaconda3\\lib\\site-packages)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pip install svg2gcode"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: svg-to-gcode in c:\\programdata\\anaconda3\\lib\\site-packages (1.5.4)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution -olorama (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -olorama (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -olorama (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -olorama (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -olorama (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -olorama (c:\\programdata\\anaconda3\\lib\\site-packages)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'svg_to_gcode' has no attribute 'convert'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6288/2670390252.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msvg_to_gcode\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0msvg_to_gcode\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconvert\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'test.svg'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'test.gcode'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'svg_to_gcode' has no attribute 'convert'"
-     ]
-    }
-   ],
-   "source": [
-    "import svg2gcode\n",
+    "from svg_to_gcode.svg_parser import parse_file\n",
+    "from svg_to_gcode.compiler import Compiler, interfaces\n",
     "\n",
-    "# Set the parameters for the G-code generator\n",
-    "settings = {\n",
-    "    \"speed\": 1000,\n",
-    "    \"feed\": 200,\n",
-    "    \"depth\": -1,\n",
-    "    \"depthofcut\": -0.5,\n",
-    "    \"top\": 0.5,\n",
-    "    \"above\": 1\n",
-    "}\n",
+    "# Instantiate a compiler, specifying the interface type and the speed at which the tool should move. pass_depth controls\n",
+    "# how far down the tool moves after every pass. Set it to 0 if your machine does not support Z axis movement.\n",
+    "gcode_compiler = Compiler(\n",
+    "    interfaces.Gcode, movement_speed=1000, cutting_speed=300, pass_depth=3.3\n",
+    "    )\n",
     "\n",
-    "# Convert an SVG file to G-code and save it to a file\n",
-    "svg2gcode.generate_gcode(\"file.svg\", \"file.gcode\", settings)\n"
+    "curves = parse_file(\"hello-world.svg\")  # Parse an svg file into geometric curves\n",
+    "\n",
+    "gcode_compiler.append_curves(curves)\n",
+    "gcode_compiler.compile_to_file(\"output.gcode\", passes=2)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -101,12 +38,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.3"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+    "hash": "46e670005f58586efd984989cbf21208f475635d63e1c747a21b69beafae180e"
    }
   }
  },
