Move Jupyter notebooks to top level folder

--- a/repeating_patterns.ipynb
+++ b/repeating_patterns.ipynb
@@ -4,100 +4,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: mecode in c:\\programdata\\anaconda3\\lib\\site-packages (0.4.1)\n",
-      "Requirement already satisfied: numpy in c:\\users\\jinch\\appdata\\roaming\\python\\python39\\site-packages (from mecode) (1.24.2)\n",
-      "Requirement already satisfied: pyserial in c:\\programdata\\anaconda3\\lib\\site-packages (from mecode) (3.5)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution -olorama (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -olorama (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -olorama (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -olorama (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -olorama (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -olorama (c:\\programdata\\anaconda3\\lib\\site-packages)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install mecode\n",
-    "\n",
-    "import mecode\n",
-    "from mecode import GMatrix"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Helpers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "def pen_down(g: GMatrix) -> None:\n",
-    "    \"\"\"Lower the pen.\n",
-    "\n",
-    "    Args:\n",
-    "        g (GMatrix): GMatrix instance to use for GCode generation.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # This represents lowering the pen, but does not have any real effect as this plotter only prints in 2D.\n",
-    "    if g.is_relative:\n",
-    "        g.move(z=-3.3)\n",
-    "    else:\n",
-    "        g.move(x=g.current_position['x'], y=g.current_position['y'], z=0)\n",
-    "    \n",
-    "    # This command actually lowers the pen.\n",
-    "    g.write(\"M9\")\n",
-    "\n",
-    "\n",
-    "def pen_up(g: GMatrix) -> None:\n",
-    "    \"\"\"Raise the pen.\n",
-    "\n",
-    "    Args:\n",
-    "        g (GMatrix): GMatrix instance to use for GCode generation.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # This represents raising the pen, but does not have any real effect as this plotter only prints in 2D.\n",
-    "    if g.is_relative:\n",
-    "        g.move(z=3.3)\n",
-    "    else:\n",
-    "        g.move(x=g.current_position['x'], y=g.current_position['y'], z=3.3)\n",
-    "\n",
-    "    # This command actually raises the pen.\n",
-    "    g.write(\"M8\")\n",
-    "\n",
-    "\n",
-    "def get_gmatrix(outfile: str = None) -> GMatrix:\n",
-    "    \"\"\"Create a GMatrix instance and write the starting GCode.\n",
-    "\n",
-    "    Args:\n",
-    "        outfile (str, optional): Path to the output file. Defaults to None.\n",
-    "\n",
-    "    Returns:\n",
-    "        GMatrix: GMatrix instance.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    start_code = \"G91 ;relative\\nG21 ;mm\\nG92 X0 Y0 Z0 ;reset origin\\nF2000;motion speed\"\n",
-    "    g = GMatrix(outfile=outfile)\n",
-    "    g.push_matrix()\n",
-    "    g.write(start_code)\n",
-    "    return g\n"
+    "from mecode import GMatrix\n",
+    "from helpers.gmatrix_extensions import get_gmatrix, pen_down, pen_up\n"
    ]
   },
   {
@@ -300,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
