Add non-extrusion move support

--- a/repeating_patterns.ipynb
+++ b/repeating_patterns.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
     "\n",
     "# Move the pen to a reasonable starting position\n",
     "pen_up(g)\n",
-    "g.move(30, 30)\n",
+    "g.move(30, 30, rapid=True)\n",
     "\n",
     "# Draw the pattern\n",
     "draw_repeating_pattern(g, 20, 20, rotated_square_pattern, 1, (4, 5))\n",
