--- a/svg2gcode.ipynb
+++ b/svg2gcode.ipynb
@@ -9,16 +9,22 @@
     "from svg_to_gcode.svg_parser import parse_file\n",
     "from svg_to_gcode.compiler import Compiler, interfaces\n",
     "\n",
+    "\n",
     "# Instantiate a compiler, specifying the interface type and the speed at which the tool should move. pass_depth controls\n",
     "# how far down the tool moves after every pass. Set it to 0 if your machine does not support Z axis movement.\n",
     "gcode_compiler = Compiler(\n",
-    "    interfaces.Gcode, movement_speed=1000, cutting_speed=300, pass_depth=3.3\n",
+    "    interfaces.Gcode, \n",
+    "    movement_speed=1000, \n",
+    "    cutting_speed=300, \n",
+    "    pass_depth=3.3\n",
     "    )\n",
     "\n",
-    "curves = parse_file(\"hello-world.svg\")  # Parse an svg file into geometric curves\n",
+    "# TODO: Need to create the compiler for generating GCode that is compatible with the X-Y plotter\n",
+    "\n",
+    "curves = parse_file(\"images/hello-world.svg\")  # Parse an svg file into geometric curves\n",
     "\n",
     "gcode_compiler.append_curves(curves)\n",
-    "gcode_compiler.compile_to_file(\"output.gcode\", passes=2)\n"
+    "gcode_compiler.compile_to_file(\"output/hello-world.svg.gcode\", passes=2)\n"
    ]
   }
  ],
